<resources>
    <string name="google_app_id">AIzaSyAICGcKh-NfGyBDhsCPizgOLF4v0rlR1Gc</string>
    <string name="app_name">TFGDrone</string>
    <string name="title_activity_demo">GSDemoActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings_menu">Settings</string>

    <string name="Obj_waypoint">Ruta objetivo</string>
    <string name="settings">Ajustes</string>
    <string name="calculate_drone_waypoint">Calcular vuelo</string>
    <string name="find_controller">Encontrar Mando</string>

    <string name="Speed_Setting">Velocidad</string>
    <string name="High_Speed">Alta</string>
    <string name="Medium_Speed">Media</string>
    <string name="Low_Speed">Baja</string>

    <string name="Height_Setting">Altura</string>
    <string name="Radius_Setting">Alcance del control remoto</string>

    <string name="Low_Power_Setting">En caso de bateria baja</string>
    <string name="Pilot_Control">Controlar Manualmente</string>
    <string name="Land">Aterrizar</string>
    <string name="Return_Home">Regresar al origen</string>
    <string name="Low_Signal_Setting">En caso de señal baja</string>
    <string name="Critial_Power_Setting">En caso de batería crítica</string>

    <string name="Accept_button">Aceptar</string>
    <string name="Cancel_button">Cancelar</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
