<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Speed_Setting_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Speed_Setting" />

    <RadioGroup
        android:id="@+id/speed_RG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation='horizontal'>

        <RadioButton
            android:id="@+id/H_Speed_RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/High_Speed" />

        <RadioButton
            android:id="@+id/M_Speed_RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Medium_Speed" />

        <RadioButton
            android:id="@+id/L_Speed_RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Low_Speed" />

    </RadioGroup>

    <TextView
        android:id="@+id/Height_Setting_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Height_Setting" />

    <EditText
        android:id="@+id/Height_Setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/Low_Power_Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Low_Power_Setting" />

    <RadioGroup
        android:id="@+id/Low_Power_RG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation='vertical'>

        <RadioButton
            android:id="@+id/Pilot_Control_LP_RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Pilot_Control" />

        <RadioButton
            android:id="@+id/Land_LP_RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Land" />

        <RadioButton
            android:id="@+id/ReturnHome_LP_RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Return_Home" />

    </RadioGroup>

    <TextView
        android:id="@+id/Crit_Power_Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Critial_Power_Setting" />

    <RadioGroup
        android:id="@+id/Crit_Power_RG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation='vertical'>

        <RadioButton
            android:id="@+id/Land_CP_RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Land" />

        <RadioButton
            android:id="@+id/ReturnHome_CP_RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Return_Home" />

    </RadioGroup>

    <TextView
        android:id="@+id/Low_Signal_Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Low_Signal_Setting" />

    <RadioGroup
        android:id="@+id/Low_Signal_RG"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation='vertical'>

        <RadioButton
            android:id="@+id/Land_LS_RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Land" />

        <RadioButton
            android:id="@+id/ReturnHome_LS_RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Return_Home" />

    </RadioGroup>

</LinearLayout>